# BulletJournal

./: .coverage  .gitignore  .pre-commit-config.yaml  DESIGN.md  IMPLEMENTATION.md  README.md  REVIEW.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  EXECUTION_PLAN.md  NOTEBOOK_AUTHORING.md  OPERATIONS.md  PROJECT_FORMAT.md  TEMPLATES.md  TROUBLESHOOTING.md
src/bulletjournal/: __init__.py  __main__.py  config.py  utils.py
src/bulletjournal/_web/: index.html
src/bulletjournal/api/: __init__.py  app.py  deps.py  errors.py  schemas.py  sse.py
src/bulletjournal/cli/: __init__.py  app.py  dev.py  doctor.py  export_project.py  import_project.py  init_project.py  mark_environment_changed.py  rebuild_state.py  (+2 more)
tests/: conftest.py
tests/api/: test_api_smoke.py  test_controller_endpoints.py
tests/fixtures/: bad_notebook_alias.py  bad_notebook_duplicate_globals.py  bad_notebook_syntax.py  bad_notebook_unparsable_cell.py  good_notebook.py
tests/integration/: test_checkpoint_flow.py  test_run_flow.py
tests/unit/: test_api_app_and_sse.py  test_cli_modules.py  test_event_service.py  test_graph_rules.py  test_graph_store.py  test_notebook_watcher.py  test_package_and_runtime_helpers.py  test_parser.py  test_planner.py  test_project_archive_and_templates.py  test_run_service_logs.py  test_runtime_context.py  test_state_db.py  test_storage.py  test_templates_validator.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
web/src/: App.tsx  appTypes.ts  main.tsx
(+129 files in other folders)
