[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "bulletjournal"
version = "0.1.0"
description = "Notebook editor and orchestrator for reproducible data science"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Agoratlas", email = "contact@agoratlas.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "marimo>=0.20.4",
    "matplotlib>=3.9.0",
    "networkx>=3.2",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
bulletjournal = "bulletjournal.cli.app:app"

[project.urls]
Homepage = "https://github.com/Agoratlas/BulletJournal"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bulletjournal = [
    "_web/**/*",
    "templates/builtin/**/*.py",
    "templates/pipelines/**/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
